--- a/index.html
+++ b/index.html
@@ -2,10 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TVify</title>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="index.css">
+
+    <title>TVify</title>
 </head>
 <body>
+    <div id="app-container">
+        <header id="app-header"></header>
+            <h1>TVify</h1>
+        </header
+        <section id="app-body">
+
+        </section>
+        <footer id="app-footer">
+            <p>Coded by &lt;3 por J Luis Acosta</p>
+        </footer>
+    </div>
 
     <script   src="http://code.jquery.com/jquery-2.2.3.min.js"   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="   crossorigin="anonymous"></script>
     <script type="text/javascript" src="index.js"></script>
