Basic App Styling

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <div id="app-container">
-        <header id="app-header"></header>
+        <header id="app-header">
             <h1>TVify</h1>
-        </header
+        </header>
         <section id="app-body">
 
         </section>
         <footer id="app-footer">
-            <p>Coded by &lt;3 por J Luis Acosta</p>
+            <p>Coded with &lt;3 by J Luis Acosta</p>
         </footer>
     </div>
 
