Spinner Loader animation included

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         <section id="app-body">
             <form action="" class="search-form">
                 <input type="text">
-                <button type="submit">Buscar</button>
+                <button type="submit">Search</button>
             </form>
             <div class="tv-shows">
+                <div class="loader">Loading...</div>
             </div>
         </section>
         <footer id="app-footer">
