Searching function implemented

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </header>
         <section id="app-body">
             <form action="" class="search-form">
-                <input type="text">
+                <input type="text" required>
                 <button type="submit">Search</button>
             </form>
             <div class="tv-shows">
