--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="app.css">
 
     <title>TVify</title>
 </head>
@@ -26,6 +26,6 @@
         </footer>
     </div>
 
-    <script type="text/javascript" src="bundle.js"></script>
+    <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
