--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="app-container">
         <header id="app-header">
-            <h1><a href="/">TVify</a></h1>
+            <h1><a href="/tvify-exercise">TVify</a></h1>
         </header>
         <section id="app-body">
             <form action="" class="search-form">
